# zag-lens

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  SPECIFICATION.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
adapters/claude/: Cargo.toml
adapters/claude/src/: lib.rs
adapters/claude/tests/: adapter.rs
adapters/codex/: Cargo.toml
adapters/codex/src/: lib.rs
adapters/codex/tests/: adapter.rs
adapters/opencode/: Cargo.toml
adapters/opencode/src/: lib.rs
adapters/opencode/tests/: adapter.rs
bridge/: Cargo.toml
bridge/src/: lib.rs  main.rs
bridge/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/installer/: Cargo.toml
crates/installer/src/: engine.rs  hooks.rs  lib.rs  model.rs  opencode.rs  paths.rs  zellij.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: protocol.rs
docs/: compatibility.md  configuration.md  development.md  installation.md
plugin/: Cargo.toml
plugin/src/: attention.rs  lib.rs  title.rs
scripts/: install.sh  smoke-status-tabs.sh  test-install.sh  test-smoke-status-tabs.sh
tests/fixtures/claude/2.1.207/: notification-elicitation.json  notification-idle.json  notification-permission.json  permission-request.json  post-tool-use-failure.json  post-tool-use.json  pre-tool-use.json  session-end.json  session-start.json  stop-failure.json  stop.json  user-prompt-submit.json
tests/fixtures/codex/0.144.3/: permission-request.json  post-tool-use-failure.json  pre-tool-use.json  session-start.json  stop.json  turn-failure.json  user-prompt-submit.json
tests/fixtures/opencode/1.17.15/: message-completed.json  permission-accepted.json  permission-asked.json  permission-rejected.json  question-asked.json  question-rejected.json  question-replied.json  session-aborted.json  session-busy.json  session-created.json  session-deleted.json  session-failed.json  session-retry.json
tests/fixtures/protocol/: duplicate.json  future-version.json  malformed.json  valid.json
