[workspace]
resolver = "3"
members = [
    "adapters/claude",
    "adapters/codex",
    "adapters/opencode",
    "bridge",
    "crates/core",
    "crates/installer",
    "crates/notifier",
    "crates/protocol",
    "plugin",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zag-lens/zag-lens"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
strip = true
