[package]
name = "zag-lens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
ulid = "1.2"
zag-lens-claude-adapter = { path = "../adapters/claude" }
zag-lens-codex-adapter = { path = "../adapters/codex" }
zag-lens-installer = { path = "../crates/installer" }
zag-lens-notifier = { path = "../crates/notifier" }
zag-lens-protocol = { path = "../crates/protocol" }

[lints]
workspace = true
