[package]
name = "zag-lens-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
autolib = false

[[bin]]
name = "zag_lens_plugin"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
time = "0.3"
zag-lens-core = { path = "../crates/core" }
zag-lens-protocol = { path = "../crates/protocol" }
zellij-tile = "=0.44.1"

[lints]
workspace = true
